<resources>
    <string name="app_name">App Market</string>
    <string name="username">نام کاربری</string>

    <string name="best_app">برترینها</string>
    <string name="new_app">جدیدترینها</string>
    <string name="free_app">رایگانی ها</string>

    <string name="name_app">اپلیکیشن</string>


    <string name="contact">"تماس با ما"</string>
    <string name="send_sms">"ارسال پیامک"</string>
    <string name="web">وب سایت</string>
    <string name="telegram">کانال تلگرام</string>
    <string name="about">"درباره ما"</string>
    <string name="serch">"جستجو"</string>
    <string name="exit">"خروج"</string>

    <string name="login">"حساب کاربری"</string>
    <string name="setting">"تنظیمات"</string>

    <string name="open1">"open"</string>

    <string name="close1">"close"</string>
    <string name="open">"open"</string>
    <string name="close">"close"</string>

    <string name="are_you_sure">"are you sure?"</string>
    <string name="yes">"yes"</string>
    <string name="no">"no"</string>


    <string name="login_from">"ورود کاربران"</string>
    <string name="hint_user">"ورود کاربران"</string>
    <string name="hiny_pass">"رمز خود را وارد کنید""</string>
    <string name="save_pass">"ذخیره سازی"</string>
    <string name="login_user">"ورود کاربران"</string>7
    <string name="cancel">لغو</string>


    <string name="register_successful">"ثبت نام انجام شد"</string>
    <string name="register_fail">نشد ! دباره امتحان کن</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">"خانه"</string>
    <string name="update">"به روز رسانی"</string>
    <string name="category">"دسته بندی"</string>
</resources>
