<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@color/orange_600"
        android:src="@drawable/logo3" />

    <LinearLayout
        android:id="@+id/linear_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00555555">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/orange_600"
            android:gravity="center"
            android:text="@string/login_from"
            android:textColor="#ffff"
            android:textSize="@dimen/title_bar" />


        <EditText
            android:id="@+id/edt_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_vpn_key_black_24dp"
            android:hint="@string/hiny_pass"
            android:gravity="right"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/chek_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_pass" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue_900" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_user" />

            <Button
                android:id="@+id/btn_calcel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />


        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_do_have_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" حساب کاربری ندارید؟ "
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:textSize="@dimen/title_bar"/>

            <TextView
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="اینجا کلیک کنید"
                android:textSize="@dimen/title_bar"
                android:textColor="@color/red_600"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_toLeftOf="@id/text_do_have_user"/>



            <!-- <Button
                 android:text="@string/register_user"
                 android:background="@drawable/btn_backgroudn"
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text_register"/>
                 -->

        </RelativeLayout>



    </LinearLayout>



</LinearLayout>