<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nf.myapp.fragment.HomeFragment"
    android:id="@+id/fragment_home">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">

     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@drawable/logo3"/>

     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
             android:orientation="vertical">

             <TextView
                 style="@style/text_style"
                 android:text="@string/best_app"/>


             <LinearLayout
                 style="@style/Linear_horizental">

                 <GridView
                     android:id="@+id/gridview_best"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:numColumns="3">

                 </GridView>

             </LinearLayout>


             <TextView
                 style="@style/text_style"
                 android:text="@string/new_app"/>


             <LinearLayout
                 style="@style/Linear_horizental">


                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">

                 </android.support.v7.widget.RecyclerView>


             </LinearLayout>


             <TextView
                 style="@style/text_style"
                 android:text="@string/free_app"
                 />


             <LinearLayout
                 style="@style/Linear_horizental">

             </LinearLayout>


         </LinearLayout>


     </ScrollView>
 </LinearLayout>

</FrameLayout>
