<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nf.myapp.MainActivity"
    android:orientation="vertical"
    android:id="@+id/drawer">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include
            layout="@layout/toolbar_layout" />



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/logo3"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    style="@style/text_style"
                    android:text="@string/best_app"/>


                <LinearLayout
                    style="@style/Linear_horizental">

                    <LinearLayout
                        style="@style/Linear_vertical">
                        <ImageView
                            style="@style/image_app"/>
                        <TextView
                            style="@style/name_app"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Linear_vertical">
                        <ImageView
                            style="@style/image_app" />
                        <TextView
                            style="@style/name_app"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Linear_vertical">
                        <ImageView
                            style="@style/image_app" />
                        <TextView
                            style="@style/name_app"/>
                    </LinearLayout>

                </LinearLayout>


                <TextView
                    style="@style/text_style"
                    android:text="@string/new_app"/>


                <LinearLayout
                    style="@style/Linear_horizental">
                    <LinearLayout
                        style="@style/Linear_vertical">
                        <ImageView
                            style="@style/image_app"/>
                        <TextView
                            style="@style/name_app"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Linear_vertical">
                        <ImageView
                            style="@style/image_app" />
                        <TextView
                            style="@style/name_app"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Linear_vertical">
                        <ImageView
                            style="@style/image_app" />
                        <TextView
                            style="@style/name_app"/>
                    </LinearLayout>

                </LinearLayout>


                <TextView
                    style="@style/text_style"
                    android:text="@string/free_app"
                    />


                <LinearLayout
                    style="@style/Linear_horizental">
                    <LinearLayout
                        style="@style/Linear_vertical">
                        <ImageView
                            style="@style/image_app"/>
                        <TextView
                            style="@style/name_app"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Linear_vertical">
                        <ImageView
                            style="@style/image_app" />
                        <TextView
                            style="@style/name_app"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Linear_vertical">
                        <ImageView
                            style="@style/image_app" />
                        <TextView
                            style="@style/name_app"/>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="@color/purple_500">
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_slider"
        app:headerLayout="@layout/header_layout"
        android:layout_gravity="start"
        app:menu="@menu/slid_menu">
    </android.support.design.widget.NavigationView>








</android.support.v4.widget.DrawerLayout>
